Code cleanup, token icon cache